--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "pnpm build"
 
 [[redirects]]
   from = "/*"
@@ -8,8 +8,8 @@
   status = 200
 
 [build.environment]
-  NODE_VERSION = "18"
-  NPM_VERSION = "9"
+  NODE_VERSION = "22"
+  PNPM_VERSION = "8"
 
 # Performance headers
 [[headers]]
