completed Services, About pages. Done Task 1, 2, 3.

--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,4 @@ VITE_BLOG_POSTS_PER_PAGE=6
 # Social Media
 VITE_TWITTER_HANDLE=@techlis
 VITE_LINKEDIN_URL=https://linkedin.com/company/techlis
-VITE_GITHUB_URL=https://github.com/techlis
+VITE_GITHUB_URL=https://github.com/Techlis
