completed Task 9 with errors and issues on Services & About pages

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,15 @@ VITE_NETLIFY_FORM_NAME=contact
 # Blog Configuration
 VITE_BLOG_POSTS_PER_PAGE=6
 
+# RSS2JSON API Configuration
+VITE_RSS2JSON_API_KEY=your_rss2json_api_key_here
+VITE_RSS2JSON_BASE_URL=https://api.rss2json.com/v1/api.json
+VITE_RSS2JSON_MAX_COUNT=10
+VITE_RSS2JSON_TIMEOUT=5000
+
+# Environment Configuration
+VITE_APP_ENV=development
+
 # Social Media
 VITE_TWITTER_HANDLE=@techlis
 VITE_LINKEDIN_URL=https://linkedin.com/company/techlis
