--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# local env files
+# do not commit any .env files to git, except for the .env.example file.
+.env
+.env*.local
+.env*.preview
+.env*.production
